# compression

./: client.py  dataset.py  main.py  model.py  pyproject.toml  server.py  slurm-9840.out  slurm-9841.out  slurm-9842.out  slurm-9843.out  slurm-9844.out  slurm-9845.out  slurm-9847.out  slurm-9850.out  slurm-9852.out  slurm-9853.out  slurm-9854.out  slurm-9855.out  slurm-9856.out  slurm-9857.out  slurm-9858.out  slurm-9859.out  slurm-9866.out  slurm-9867.out  slurm-9868.out  slurm-9869.out  slurm-9870.out  slurm-9871.out  slurm-9872.out  slurm-9873.out  slurm-9874.out  slurm-9875.out  slurm-9878.out  slurm.sh  test.py  utils.py
conf/: base.yaml
conf/compression/: compression.yaml
outputs/2024-08-14/18-00-05/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-14/18-03-24/.hydra/: hydra.yaml
outputs/2024-08-14/18-13-26/.hydra/: hydra.yaml
outputs/2024-08-14/18-15-57/.hydra/: hydra.yaml
outputs/2024-08-14/18-17-58/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-14/18-21-12/.hydra/: hydra.yaml
outputs/2024-08-14/18-29-56/.hydra/: hydra.yaml
outputs/2024-08-14/18-30-49/.hydra/: hydra.yaml
outputs/2024-08-14/18-31-19/.hydra/: hydra.yaml
outputs/2024-08-14/18-36-15/.hydra/: hydra.yaml
outputs/2024-08-14/18-38-48/.hydra/: hydra.yaml
outputs/2024-08-14/18-41-45/.hydra/: hydra.yaml
outputs/2024-08-14/18-46-45/: results.pkl
outputs/2024-08-14/18-46-45/.hydra/: hydra.yaml
outputs/2024-08-14/19-30-13/: results.pkl
outputs/2024-08-14/19-30-13/.hydra/: hydra.yaml
outputs/2024-08-14/20-25-18/.hydra/: config.yaml  (+1 more)
outputs/2024-08-14/20-40-19/: results.pkl
(+12 files in other folders)
